--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -3,7 +3,9 @@
     margin: 30px;
     display: flex;
     flex-direction: column;
-    box-shadow: 10px 10px 5px 0px rgba(73, 71, 71, 0.35);
+    box-shadow: 10px 10px 5px 0px rgbargb(31, 29, 29);
+    border-radius: 20px;
+
     
 }
 
@@ -12,7 +14,7 @@
 }
  
 .card-character-footer{
-    background-color: black;
+    background-color: rgb(31, 29, 29);
     height: 230px;
     display: flex;
     flex-direction: column;
@@ -22,5 +24,10 @@
 }
 
 .card-texts{
-    color: rgb(61, 199, 68);
+    color: rgb(45, 158, 51);
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.episodes-page-title {
+    background-image: url(https://images.amcnetworks.com/amc.com/wp-content/uploads/2012/06/BB-S5-Key-Art-2560-v2.jpg) ;
 }
