--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -3,14 +3,15 @@
     margin: 30px;
     display: flex;
     flex-direction: column;
-    box-shadow: 10px 10px 5px 0px rgbargb(31, 29, 29);
+    box-shadow: 10px 10px 5px 0px;
     border-radius: 20px;
-
-    
 }
 
 .card-character img{
     width: 100%;
+    height: 350px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
 }
  
 .card-character-footer{
@@ -21,6 +22,8 @@
     align-items: flex-start;
     justify-content: center;
     padding: 30px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
 }
 
 .card-texts{
@@ -29,5 +32,9 @@
 }
 
 .episodes-page-title {
-    background-image: url(https://images.amcnetworks.com/amc.com/wp-content/uploads/2012/06/BB-S5-Key-Art-2560-v2.jpg) ;
+    background-image: url("https://images.amcnetworks.com/amc.com/wp-content/uploads/2012/06/BB-S5-Key-Art-2560-v2.jpg") ;
+    width: 100%;
+    height: 300px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
 }
