--- a/src/containers/home.css
+++ b/src/containers/home.css
@@ -9,6 +9,8 @@
     height: 500px;
     background-color: #272626;
     background-blend-mode: soft-light;
+    color: #fff;
+    padding: 96px 0 0 32px;
 }
 
 .header-home h1{
@@ -16,8 +18,7 @@
     color: #fff;
     font-size: 1.5rem;
     font-family: 'Noto Sans JP';
-    padding-top: 300px;
-    padding-left: 50px;
+    
 }
 
 .main-home{
@@ -33,13 +34,21 @@
 
 .container-search-input{
     width: 300px;
-    height: 30px;
+    height: 38px;
+    border: none;
     border-radius: 10px;
+    font-size: 16px;
+    
 }
+.container-search-input:focus{
+    outline: none;
+}
+
 .container-episodios, .container-personajes{
-    width: 720px;
-    height: 300px;
-    background-position: center;
+    width: 80%;
+    height: 400px;
+    background-position-y: start;
+    background-position-y: center;
     background-size: cover;
     background-repeat: no-repeat;
     margin: 50px 0;
@@ -71,3 +80,4 @@
     width: 100%;
     display: flex;
 }
+
