--- a/src/containers/home.css
+++ b/src/containers/home.css
@@ -39,6 +39,7 @@
     border-radius: 10px;
     font-size: 16px;
     
+    
 }
 .container-search-input:focus{
     outline: none;
@@ -79,5 +80,6 @@
 .container-search-card{
     width: 100%;
     display: flex;
+    justify-content: center;
 }
 
